--- a/hellospring/src/main/webapp/WEB-INF/web.xml
+++ b/hellospring/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,22 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+  <!-- regist servlet -->
+  <servlet>
+    <servlet-name>spring</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <!-- if you want to make this servlet config file, make file '${servletName}-context.xml' -->
+    <!-- ex)spring-context.xml -->
+    <!-- And if you want to change config file name, Use this init-param -->
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>/WEB-INF/spring-context.xml</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>spring</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
