--- a/hellospring/src/main/webapp/WEB-INF/web.xml
+++ b/hellospring/src/main/webapp/WEB-INF/web.xml
@@ -14,13 +14,13 @@
   <servlet>
     <servlet-name>spring</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-    <!-- if you want to make this servlet config file, make file '${servletName}-context.xml' -->
-    <!-- ex)spring-context.xml -->
+    <!-- if you want to make this servlet config file, make file '${servletName}-servlet.xml' -->
+    <!-- ex)spring-servlet.xml -->
     <!-- And if you want to change config file name, Use this init-param -->
-    <init-param>
+    <!-- <init-param>
       <param-name>contextConfigLocation</param-name>
       <param-value>/WEB-INF/spring-context.xml</param-value>
-    </init-param>
+    </init-param>  -->
   </servlet>
   <servlet-mapping>
     <servlet-name>spring</servlet-name>
