--- a/hellospring/src/main/webapp/WEB-INF/web.xml
+++ b/hellospring/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,16 @@
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
   
+  <context-param>
+    <param-name>dbuser</param-name>
+    <param-value>himedia</param-value>
+  </context-param>
+  <context-param>
+    <param-name>dbpass</param-name>
+    <param-value>himedia</param-value>
+  </context-param>
+  
+  
   <!-- regist servlet -->
   <servlet>
     <servlet-name>spring</servlet-name>
