--- a/myportal/src/main/webapp/WEB-INF/web.xml
+++ b/myportal/src/main/webapp/WEB-INF/web.xml
@@ -41,5 +41,9 @@
     </init-param>
   </filter>
   
+   <error-page>
+     <error-code>404</error-code>
+     <location>/views/errors/error.404.jsp</location>
+   </error-page>
   
 </web-app>
