--- a/myportal/src/main/webapp/WEB-INF/web.xml
+++ b/myportal/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,12 @@
   <servlet>
     <servlet-name>spring</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <multipart-config>
+      <location>C:\\upload-tmp</location>
+      <max-file-size>10485760</max-file-size>
+      <max-request-size>20971520</max-request-size>
+      <file-size-threshold>10485760</file-size-threshold>
+    </multipart-config>
   </servlet>
   <servlet-mapping>
     <servlet-name>spring</servlet-name>
