--- a/myportal/src/main/webapp/WEB-INF/web.xml
+++ b/myportal/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <servlet-name>spring</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <multipart-config>
-      <location>/tmp/myResourcesTmp</location>
+      <location>c:\\tmp\\myResourcesTmp</location>
       <max-file-size>10485760</max-file-size>
       <max-request-size>20971520</max-request-size>
       <file-size-threshold>10485760</file-size-threshold>
